handle heating *and* cooling

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 * Implement reading of thermistor (this is kind of imporant).
 
+* Implement heating/cooling mode selection (currently defaults to heating).
+
 * Implement some kind of serial interface to allow for changing of constants.
 
 * Implement scheduling.
